# StateManager

./: CMakeLists.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cpp-ci.yml  format-checker.yml
include/: IState.h  StateManager.h
src/: StateManager.cpp
tests/: test_StateManager.cpp
